--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      TODO LIST
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-input [(ngModel)]="nombre.value" placeholder="nombre de tarea" >
+  </ion-input><br>
+  <ion-input [(ngModel)]="fecha.value" placeholder="fecha de tarea" type="date"></ion-input><br>
+    <ion-button (click)="a()">agregar tarea</ion-button>
+    <div *ngFor="let x of lol ">
+      <h3>{{x.nombre}}</h3>
+      <h3>{{x.fecha}}</h3>
+      <ion-checkbox>hecho</ion-checkbox>
+    </div>
 </ion-content>
